# ha-fuel-predictor-wa

./: .gitignore  .gortex.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  cliff.toml  hacs.json  info.md  mkdocs.yml  pyproject.toml  requirements-test.txt
.github/workflows/: release.yml  tests.yml
custom_components/fuel_predictor_wa/: __init__.py  catchment.py  config_flow.py  const.py  coordinator.py  forecast_ledger.py  fuelwatch.py  geocode.py  global_features.py  historic_client.py  history.py  manifest.json  predictor.py  sensor.py  services.yaml  strings.json  trainer.py
custom_components/fuel_predictor_wa/models/: .gitkeep
docs/: architecture.md  index.md  roadmap.md
tests/: conftest.py  test_catchment.py  test_config_flow.py  test_const.py  test_coordinator_train.py  test_cycle.py  test_cycle_state.py  test_forecast_accuracy_sensor.py  test_forecast_ledger.py  test_fuelwatch.py  test_geocode.py  test_global_features.py  test_historic_client.py  test_local_model.py  test_model_fit_sensor.py  test_predictor.py  test_status_sensor.py  test_tgp_drift.py  test_trainer.py
tools/: README.md  accuracy_spike_local_vs_wa.py  backtest.py  download_history.py  spike_global_leading_indicators.py  train.py
